--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-icu": "^2.3.0",
     "react": "^18.2.0",
