--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.4.5",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-icu": "^2.3.0",
     "react": "^18.2.0",
