--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "reactstrap": "^9.2.0",
     "slick-carousel": "^1.8.1",
     "use-local-storage-state": "^19.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
